add copyright in doc

--- a/lime.tex
+++ b/lime.tex
@@ -10,6 +10,7 @@
 \usepackage[skip=-10pt,font=small,font=bf,labelformat=empty,justification=RaggedRight]{caption}
 \usepackage{msc}
 \usepackage{textcomp}
+\usepackage[nottoc,numbib]{tocbibind}
 
 \let\oldtabular\tabular 
 \renewcommand{\tabular}{\footnotesize\oldtabular}
@@ -865,6 +866,8 @@ any session-based message encryption algorithm that meets certain conditions.}\t
       \item 0x07: \textbf{db error}: server encountered problem with its database.
       \item 0x08: \textbf{bad request}: malformed peer bundle request.
     \end{itemize}
+\section{IPR}
+  \paragraph*{}Copyright\textcopyright 2017 Belledonne Communications.  All rights reserved.
 \newpage
 \begin{thebibliography}{99}
 
