--- a/lime.tex
+++ b/lime.tex
@@ -452,12 +452,7 @@ any session-based message encryption algorithm that meets certain conditions.}\t
           \textit{initiator} being the device who initiates the session (Alice in the X3DH spec) by fetching a keys bundle on the X3DH server and \textit{receiver} being the recipient device of the first message (Bob in the X3DH spec).
     \subsubsection{X3DH test server}
       \paragraph*{PHP}: An X3DH test server running on nginx/mysql/php docker container is provided with the lime library source code. This server is not meant to be used in production and its purpose is for testing only. This server lacks user authentication layer, which in real use case is provided by the linphone ecosystem.
-      \paragraph*{Nodejs}: An X3DH test server running on nodejs is provided with the Lime library source code. This server is not meant to be used in production and its purpose is for testing only. It includes a basic user authentication(to the purpose of testing the correct implementation of it in a client) but let any authenticated user run commands in the name of others.Open instances of this version of the test server shall be running on https://sip5.linphone.org:25519 (operating with curve 25519) and https://sip5.linphone.org:25520 (operating with curve 448) accepting connection identified as anyone using the credentials:
-      \begin{itemize}
-        \item username: "alice"
-        \item password: "you see the problem is this"
-      \end{itemize}
-
+      \paragraph*{Nodejs}: An X3DH test server running on nodejs is provided with the Lime library source code. This server is not meant to be used in production and its purpose is for testing only. This server lacks user authentication layer, which in real use case is provided by the linphone ecosystem.
   \subsection{Sesame}
     \paragraph{}The Sesame requirements are fulfilled as follow:
     \begin{itemize}
